kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lifeguard
  labels:
    app: lifeguard-insurance
