kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lifeguard-app
  namespace: lifeguard
spec:
  type: NodePort
  selector:
    app: lifeguard-app
  ports:
    - port: 80         # Internal cluster communication port
      targetPort: 8080 # Port your Spring Boot application runs on
      nodePort: 31000  # External port opened on AWS EC2 worker instances
